--- a/examples/labeling/point-labels-conditional-style.html
+++ b/examples/labeling/point-labels-conditional-style.html
@@ -13,6 +13,17 @@
 
 <body>
   <div id="map"></div>
+  <aside class="toolbox">
+    <div class="box">
+      <header>
+        <h1>Conditional styles</h1>
+      </header>
+      <section>
+        <p class="description open-sans">Style and label points with conditions</p>
+      </section>
+      <footer class="js-footer"></footer>
+    </div>
+  </aside>
 
   <script>
     const map = new mapboxgl.Map({
@@ -71,7 +82,7 @@
 
       layer.on('updated', layerUpdated);
 
-      // Style labels add stops to paint properties for conditional label styles
+      // Style labels with conditions for text-fill paint property
       map.addLayer({
         "id": "my-labels",
         "type": "symbol",
@@ -87,17 +98,16 @@
           "text-letter-spacing": 0.1
         },
         "paint": {
-          "text-color": {
-            "property": "label_field",
-            "type": "categorical",
-            "stops": [
-              ["Union Station", "#0B9F95"],
-              ["Invesco Field at Mile High Stadium", "#D36DFB"],
-              ["Pepsi Center", "#ff9674"],
-              ["Coors Field", "#F75869"]
-            ]
-          },
-          "text-halo-color": "#888",
+          "text-color": [
+            'match',
+            ['get', 'label_field'],
+            'Union Station', '#0B9F95',
+            'Invesco Field at Mile High Stadium', '#D36DFB',
+            'Pepsi Center', '#FF9674',
+            'Coors Field', '#F75869',
+            /* other values */ '#ccc'
+          ],
+          "text-halo-color": "#000",
           "text-halo-width": 1.2,
           "text-halo-blur": 1
         }
