adding title boxes

--- a/examples/labeling/point-labels-conditional-style.html
+++ b/examples/labeling/point-labels-conditional-style.html
@@ -105,7 +105,7 @@
             'Invesco Field at Mile High Stadium', '#D36DFB',
             'Pepsi Center', '#FF9674',
             'Coors Field', '#F75869',
-            /* other values */ '#ccc'
+            '#ccc'
           ],
           "text-halo-color": "#000",
           "text-halo-width": 1.2,
