--- a/examples/labeling/point-labels-size-zoom.html
+++ b/examples/labeling/point-labels-size-zoom.html
@@ -13,6 +13,17 @@
 
 <body>
   <div id="map"></div>
+  <aside class="toolbox">
+    <div class="box">
+      <header>
+        <h1>Size labels by zoom</h1>
+      </header>
+      <section>
+        <p class="description open-sans">Add one CARTO layer to your map</p>
+      </section>
+      <footer class="js-footer"></footer>
+    </div>
+  </aside>
 
   <script>
     const map = new mapboxgl.Map({
