--- a/examples/labeling/point-labels-conditional-style.html
+++ b/examples/labeling/point-labels-conditional-style.html
@@ -30,7 +30,8 @@
       container: 'map',
       style: carto.basemaps.darkmatter,
       center: [-105.005366, 39.749277],
-      zoom: 14
+      zoom: 14,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
