--- a/examples/labeling/polygon-labels.html
+++ b/examples/labeling/polygon-labels.html
@@ -30,7 +30,8 @@
       container: 'map',
       style: carto.basemaps.voyager,
       center: [-122.406855, 37.744263],
-      zoom: 11
+      zoom: 11,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
