--- a/examples/labeling/point-labels.html
+++ b/examples/labeling/point-labels.html
@@ -30,7 +30,8 @@
       container: 'map',
       style: carto.basemaps.darkmatter,
       center: [-104.994105, 39.745939],
-      zoom: 14
+      zoom: 14,
+      scrollZoom: false
     });
 
     const nav = new mapboxgl.NavigationControl({
