--- a/examples/guides/add-legends/step-5.html
+++ b/examples/guides/add-legends/step-5.html
@@ -64,7 +64,9 @@
         layer.on('loaded', () => {
 
             // Request data for legend from the layer viz
-            const colorLegend = layer.viz.color.getLegendData();
+            const colorLegend = layer.viz.color.getLegendData({
+                othersLabel: 'Other weather'
+            });
             let colorLegendList = '';
 
             // Create list elements for legend
@@ -73,7 +75,7 @@
 
                 // Style for legend items based on geometry type
                 colorLegendList +=
-                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Other weather')}</span></li>\n`;
+                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key}</span></li>\n`;
             });
 
             // Place list items in the content section of the title/legend box
