--- a/examples/guides/data-driven-viz-1/step-8.html
+++ b/examples/guides/data-driven-viz-1/step-8.html
@@ -64,7 +64,9 @@
         layer.on('loaded', () => {
             hideLoader();
 
-            const colorLegend = layer.viz.color.getLegendData();
+            const colorLegend = layer.viz.color.getLegendData({
+                othersLabel: 'Other weather'
+            });
             let colorLegendList = '';
 
             function rgbToHex(color) {
@@ -80,7 +82,7 @@
 
                 if (color) {
                     colorLegendList +=
-                        `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Other weather')}</span></li>\n`;
+                        `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key}</span></li>\n`;
                 }
             });
 
