--- a/examples/guides/data-driven-viz-1/step-9.html
+++ b/examples/guides/data-driven-viz-1/step-9.html
@@ -64,7 +64,9 @@
         layer.on('loaded', () => {
             hideLoader();
 
-            const colorLegend = layer.viz.color.getLegendData();
+            const colorLegend = layer.viz.color.getLegendData({
+                othersLabel: 'Other weather'
+            });
             let colorLegendList = '';
 
             function rgbToHex(color) {
@@ -76,7 +78,7 @@
             colorLegend.data.forEach((legend, index) => {
                 const color = rgbToHex(legend.value);
                 colorLegendList +=
-                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Other causes')}</span></li>\n`;
+                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key}</span></li>\n`;
             });
 
             document.getElementById('content').innerHTML = colorLegendList;
