--- a/examples/guides/add-legends/step-8.html
+++ b/examples/guides/add-legends/step-8.html
@@ -64,16 +64,14 @@
       hideLoader();
 
       const colorLegend = layer.viz.color.getLegendData({
-        othersLabel: 'Default'
+        othersLabel: 'Others'
       });
 
       let colorLegendList = '';
       colorLegend.data.forEach((legend) => {
         const colorHex = rgbToHex(legend.value);
-        const type = legend.key;
-        const entry = type !== 'CARTO_VL_OTHERS' ? type : 'Others';
         colorLegendList +=
-          `<li><span class="${viz.geometryType}-mark" style="border-color:${colorHex};"></span> <span>${entry}</span></li>\n`;
+          `<li><span class="${viz.geometryType}-mark" style="border-color:${colorHex};"></span> <span>${legend.key}</span></li>\n`;
       });
 
       document.getElementById('content').innerHTML = colorLegendList;
