--- a/examples/legends/category-point-legend.html
+++ b/examples/legends/category-point-legend.html
@@ -66,7 +66,10 @@
         layer.on('loaded', () => {
 
             // Request data for legend from the layer viz
-            const colorLegend = layer.viz.color.getLegendData();
+            const colorLegend = layer.viz.color.getLegendData({
+                othersValue: 'Other weather'
+            });
+
             let colorLegendList = '';
 
             // Create list elements for legend
@@ -75,7 +78,7 @@
 
                 // Style for legend items based on geometry type
                 colorLegendList +=
-                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key.replace('CARTO_VL_OTHERS', 'Other weather')}</span></li>\n`;
+                    `<li><span class="point-mark" style="background-color:${color}; border: 1px solid black;"></span><span>${legend.key}</span></li>\n`;
             });
 
             // Place list items in the content section of the title/legend box
