--- a/examples/guides/add-widgets-advanced/step-3.html
+++ b/examples/guides/add-widgets-advanced/step-3.html
@@ -59,7 +59,8 @@
 
     // Define the visualization
     const viz = new carto.Viz(`
-      @v_histogram: viewportHistogram($diameter, [[0, 1], [1, 2], [2, 3], [3, 4], [4, 5], [5, 6]])
+      @v_viewportHistogram: viewportHistogram($diameter, [[0, 1], [1, 2], [2, 3], [3, 4], [4, 5], [5, 6]])
+      @v_globalHistogram: globalHistogram($diameter, [[0, 1], [1, 2], [2, 3], [3, 4], [4, 5], [5, 6]])
       width: 5
       strokeWidth: 0
     `);
@@ -70,7 +71,7 @@
         duration: 0
       },
       legend: {
-        display: false
+        display: true
       },
       scales: {
         yAxes: [{
@@ -90,7 +91,10 @@
             display: false
           },
           ticks: {
-            display: false
+            display: true,
+            callback: function(value, index, values) {
+              return `[${value.join(', ')}]`;
+            }
           },
           barPercentage: 1.0,
           categoryPercentage: 1.0
@@ -110,20 +114,31 @@
     layer.on('loaded', hideLoader);
     
     layer.on('updated', () => {
-      // Save histogram variable
-      const histogram = layer.viz.variables.v_histogram;
-      // Get histogram data
-      const histogramData = histogram.value;
+      // Save histograms variable
+      const viewportHistogram = layer.viz.variables.v_viewportHistogram;
+      const globalHistogram = layer.viz.variables.v_globalHistogram;
+
+      // Get histograms data
+      const viewportHistogramData = viewportHistogram.value;
+      const globalHistogramData = globalHistogram.value;
+      
       // Chart.js set up
-      const labels = histogramData.map(elem => elem.x);
-      const data = histogramData.map(elem => elem.y);
-      const backgroundColor = '#00718b';
+      const labels = viewportHistogramData.map(elem => elem.x);
+      const viewportData = viewportHistogramData.map(elem => elem.y);
+      const globalData = globalHistogramData.map(elem => elem.y);
+      const viewportColor = '#F2B701';
+      const globalColor = '#E73F74';
 
       chart.data = {
         labels,
         datasets: [{
-          data,
-          backgroundColor
+          label: 'Global',
+          data: globalData,
+          backgroundColor: globalColor
+        }, {
+          label: 'Viewport',
+          data: viewportData,
+          backgroundColor: viewportColor
         }]
       };
 
