Add and clean examples 1 to 6

--- a/examples/guides/add-widgets-advanced/step-2.html
+++ b/examples/guides/add-widgets-advanced/step-2.html
@@ -62,6 +62,7 @@
       @v_histogram: viewportHistogram($diameter, [[0, 1], [1, 2], [2, 3], [3, 4], [4, 5], [5, 6]])
       width: 5
       strokeWidth: 0
+      color: #00718b
     `);
 
     // Draw chart using Chart.js library (https://www.chartjs.org/)
