--- a/examples/guides/add-widgets-advanced/step-1.html
+++ b/examples/guides/add-widgets-advanced/step-1.html
@@ -60,6 +60,7 @@
     // Define the visualization
     const viz = new carto.Viz(`
       @v_histogram: viewportHistogram($street_side_name)
+      color: ramp($street_side_name, [#00718b, #089099, #46aea0, #7ccba2, #f7feae])
       width: 5
       strokeWidth: 0
     `);
@@ -117,7 +118,7 @@
       // Chart.js set up
       const labels = histogramData.map(elem => elem.x);
       const data = histogramData.map(elem => elem.y);
-      const backgroundColor = ['#00718b', '#089099', '#46aea0', '#7ccba2', '#f7feae'];
+      const backgroundColor = layer.viz.color.value;
 
       chart.data = {
         labels,
