--- a/examples/guides/add-widgets-advanced/step-1.html
+++ b/examples/guides/add-widgets-advanced/step-1.html
@@ -21,7 +21,7 @@
         <h1>Stree Side Name</h1>
       </header>
       <section>
-        <canvas id="histogram" width="500" height="600"></canvas>
+        <canvas id="histogram" width="300" height="300"></canvas>
       </section>
     </div>
   </aside>
@@ -60,7 +60,7 @@
     // Define the visualization
     const viz = new carto.Viz(`
       @v_histogram: viewportHistogram($street_side_name)
-      color: ramp($street_side_name, [#00718b, #089099, #46aea0, #7ccba2, #f7feae])
+      color: ramp($street_side_name, Vivid)
       width: 5
       strokeWidth: 0
     `);
@@ -118,7 +118,7 @@
       // Chart.js set up
       const labels = histogramData.map(elem => elem.x);
       const data = histogramData.map(elem => elem.y);
-      const backgroundColor = layer.viz.color.value;
+      const backgroundColor = '#00718b';
 
       chart.data = {
         labels,
