--- a/examples/labeling/point-labels.html
+++ b/examples/labeling/point-labels.html
@@ -16,7 +16,7 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Point labels</h1>
+        <h1>Points of interest</h1>
       </header>
       <section>
         <p class="description open-sans">Style and label points</p>
