--- a/examples/labeling/polygon-labels.html
+++ b/examples/labeling/polygon-labels.html
@@ -16,7 +16,7 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Label Polygons</h1>
+        <h1>San Francisco neighborhoods</h1>
       </header>
       <section>
         <p class="description open-sans">Style and label polygons</p>
