--- a/examples/labeling/cluster-labels-average.html
+++ b/examples/labeling/cluster-labels-average.html
@@ -15,7 +15,7 @@
     <aside class="toolbox">
         <div class="box">
             <header>
-                <h1>Label cluster average</h1>
+                <h1>Average temperatures</h1>
             </header>
             <section>
                 <p class="description open-sans">Symbolize and label viewport-based cluster averages</p>
