--- a/examples/labeling/cluster-labels-count.html
+++ b/examples/labeling/cluster-labels-count.html
@@ -15,7 +15,7 @@
     <aside class="toolbox">
         <div class="box">
             <header>
-                <h1>Label clusters</h1>
+                <h1>Montreal parking signs</h1>
             </header>
             <section>
                 <p class="description open-sans">Symbolize and label by viewport cluster count</p>
