--- a/examples/labeling/point-labels-conditional-style.html
+++ b/examples/labeling/point-labels-conditional-style.html
@@ -16,7 +16,7 @@
   <aside class="toolbox">
     <div class="box">
       <header>
-        <h1>Conditional styles</h1>
+        <h1>Highlight points of interest</h1>
       </header>
       <section>
         <p class="description open-sans">Style and label points with conditions</p>
